[gd_scene load_steps=2 format=3 uid="uid://dvdyt3m3ajf6l"]

[ext_resource type="Script" path="res://scripts/Sequence/step_info.gd" id="1_0lijr"]

[node name="HBox_StepInfo" type="HBoxContainer"]
script = ExtResource("1_0lijr")

[node name="Label_Time" type="Label" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Time"
horizontal_alignment = 1

[node name="VSep_Left" type="VSeparator" parent="."]
layout_mode = 2

[node name="Label_Step" type="Label" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Step"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button_Down" type="Button" parent="."]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "⬇"

[node name="Button_Up" type="Button" parent="."]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "⬆"

[connection signal="pressed" from="Button_Down" to="." method="_on_button_down_pressed"]
[connection signal="pressed" from="Button_Up" to="." method="_on_button_up_pressed"]
